--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.application.name=be4
+s?pring.application.name=be4
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://db-32llb9.vpc-cdb.ntruss.com:3306/chatdb?useSSL=false
