--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,5 +13,5 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
 logging.level.org.springframework=info
-#spring.jpa.show-sql=true
-#spring.jpa.properties.hibernate.format_sql=true
+
+server.port=8070
